--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.FE"
         tools:targetApi="31">
         <activity
+            android:name=".SignUpID"
+            android:exported="false" />
+        <activity
+            android:name=".Login"
+            android:exported="false" />
+        <activity
             android:name=".TermsofUse"
             android:exported="true" />
         <activity
