--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.FE"
         tools:targetApi="31">
         <activity
+            android:name=".SignUpComplete"
+            android:exported="false" />
+        <activity
+            android:name=".SignUpName"
+            android:exported="false" />
+        <activity
             android:name=".SignUpPW"
             android:exported="false" />
         <activity
