UI: 검색, 바텀네비 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,10 +23,10 @@
         </activity>
 
         <activity
-            android:name=".SearchMainActivity"
+            android:name=".search.SearchMainActivity"
             android:windowSoftInputMode="adjustPan" />
 
-        <activity android:name=".BookclubPlaceSearchActivity"
+        <activity android:name=".bookclub_place.BookclubPlaceSearchActivity"
             android:windowSoftInputMode="adjustPan" />
 
 
