UI: structure update
main merge 확인을 위한 commit

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -15,7 +17,13 @@
 
         <activity
             android:name=".SplashActivity"
-            android:exported="false" />  
+            android:exported="false" />
+        <activity
+            android:name=".bookclub_book.BookClubJoinActivity"
+            android:exported="false" />
+        <activity
+            android:name=".setting.SettingActivity"
+            android:exported="false" />
         <activity          
             android:name=".SignUpComplete"
             android:exported="false" />
@@ -35,6 +43,9 @@
             android:name=".TermsofUse"
             android:exported="true" />
         <activity
+            android:name=".bookclub_book.BookclubBookActivity"
+            android:exported="true" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -43,9 +54,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".MainActivity"/>
-        <activity android:name=".bookclub_book.BookclubBookActivity"/>
     </application>
 
 </manifest>
