--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,17 +16,23 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".BookclubBookReview"
+            android:name=".BookDetail.BookDetailActivity"
             android:exported="false" />
+        <activity
+            android:name=".BookLetter.LetterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".BookclubBookReview"
+            android:exported="true" />
         <activity
             android:name=".BookclubJoin"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".MyPageWriteReview"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".Setting"
-            android:exported="false" />
+            android:exported="true" />
         <activity          
             android:name=".Preference4"
             android:exported="false" />
