--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
 
     <application
         android:allowBackup="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ttt_logo_icon"
@@ -34,40 +35,40 @@
             android:name=".Setting"
             android:exported="true" />
         <activity          
-            android:name=".Preference.Preference4"
+            android:name=".preference.Preference4"
             android:exported="false" />
         <activity
-            android:name=".Preference.Preference_complete"
+            android:name=".preference.Preference_complete"
             android:exported="false" />
         <activity
-            android:name=".Preference.Preference3"
+            android:name=".preference.Preference3"
             android:exported="false" />
         <activity
-            android:name=".Preference.Preference2"
+            android:name=".preference.Preference2"
             android:exported="false" />
         <activity
-            android:name=".Preference.Preference"
+            android:name=".preference.Preference"
             android:exported="true" />
         <activity
-            android:name=".Login.PasswordResetActivity"
+            android:name=".login.PasswordResetActivity"
             android:exported="false" />
         <activity
-            android:name=".SignUp.SignUpComplete"
+            android:name=".signup.SignUpComplete"
             android:exported="false" />
         <activity
-            android:name=".SignUp.SignUpName"
+            android:name=".signup.SignUpName"
             android:exported="false" />
         <activity
-            android:name=".SignUp.SignUpPW"
+            android:name=".signup.SignUpPW"
             android:exported="false" />
         <activity
-            android:name=".SignUp.SignUpID"
+            android:name=".signup.SignUpID"
+            android:exported="true" />
+        <activity
+            android:name=".login.Login"
             android:exported="false" />
         <activity
-            android:name=".Login.Login"
-            android:exported="false" />
-        <activity
-            android:name=".SignUp.TermsofUse"
+            android:name=".signup.TermsofUse"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
