--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,7 +57,7 @@
             android:exported="false" />
         <activity
             android:name=".signup.SignUpName"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".signup.SignUpPW"
             android:exported="false" />
