--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,7 +66,7 @@
             android:exported="true" />
         <activity
             android:name=".login.Login"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".signup.TermsofUse"
             android:exported="true" />
