--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
 
     <application
@@ -25,7 +26,7 @@
             android:name=".bookclub_book.BookclubBookDetail"
             android:exported="false" />
         <activity
-            android:name=".bookclub_book.BookclubWriteReview"
+            android:name=".bookclub_book.BookClubCertification"
             android:exported="false" />
         <activity
             android:name=".BookDetail.BookDetailActivity"
