--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,20 +2,22 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
-        android:networkSecurityConfig="@xml/network_security_config"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ttt_logo_icon"
         android:label="Ttt."
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ttt_logo_icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.FE"
         tools:targetApi="31">
-
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
         <activity
             android:name=".BookDetail.BookDetailActivity"
             android:exported="false" />
@@ -34,7 +36,7 @@
         <activity
             android:name=".Setting"
             android:exported="true" />
-        <activity          
+        <activity
             android:name=".preference.Preference4"
             android:exported="false" />
         <activity
@@ -71,7 +73,7 @@
             android:name=".signup.TermsofUse"
             android:exported="true" />
         <activity
-            android:name=".MainActivity"
+            android:name=".SplashActivity_ttt"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -79,15 +81,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".search.SearchMainActivity"
             android:windowSoftInputMode="adjustPan" />
-
-        <activity android:name=".bookclub_place.BookclubPlaceSearchActivity"
+        <activity
+            android:name=".bookclub_place.BookclubPlaceSearchActivity"
             android:windowSoftInputMode="adjustPan" />
-
-
     </application>
 
 </manifest>
