--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
         tools:targetApi="31">
 
         <activity
+            android:name=".Notification.NotificationActivity"
+            android:exported="false" />
+
+        <activity
             android:name=".BookDetail.BookDetailActivity"
             android:exported="false" />
         <activity
