--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,12 +17,32 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@mipmap/ttt_logo_icon"
+        android:label="Ttt."
+        android:roundIcon="@mipmap/ttt_logo_icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.FE"
         tools:targetApi="31">
+
+        <activity
+            android:name=".BookDetail.BookDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".BookLetter.LetterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".BookclubBookReview"
+            android:exported="true" />
+        <activity
+            android:name=".BookclubJoin"
+            android:exported="true" />
+        <activity
+            android:name=".MyPageWriteReview"
+            android:exported="true" />
+        <activity
+            android:name=".Setting"
+            android:exported="true" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
