--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -86,6 +86,9 @@
         <activity
             android:name=".signup.TermsofUse"
             android:exported="true" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true" />
 
 <!--        <activity-->
 <!--            android:name=".MainActivity"-->
