--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
 
     <application
         android:networkSecurityConfig="@xml/network_security_config"
@@ -21,6 +21,9 @@
 
         <activity
             android:name=".mypage.MyPageScrapDetail"
+            android:exported="false" />
+        <activity
+            android:name=".mypage.ScrapNewFolder"
             android:exported="false" />
         <activity
             android:name=".bookclub_book.BookclubBookDetail"
