test브랜치 변경사항 저장

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,14 @@
             android:exported="false" />
 
         <activity
+            android:name=".Review.BookReviewActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".Review.ReviewActivity"
+            android:exported="false" />
+
+        <activity
             android:name=".BookDetail.BookDetailActivity"
             android:exported="false" />
         <activity
