fix: manifest 파일 오류 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -155,4 +155,8 @@
 
         <activity
             android:name=".search.SearchMainActivity"
- ▋
+            android:exported="false">
+        </activity>
+
+    </application>
+</manifest>
