--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,6 +73,10 @@
             android:exported="false" />
 
         <activity
+            android:name=".Review.SpaceReviewActivity"
+            android:exported="false" />
+
+        <activity
             android:name=".BookDetail.BookDetailActivity"
             android:exported="false" />
         
@@ -143,6 +147,14 @@
         <activity
             android:name=".signup.TermsofUse"
             android:exported="true" />
+
+        <activity
+            android:name=".search.SearchMainActivity"
+            android:windowSoftInputMode="adjustPan" />
+
+        <activity
+            android:name=".bookclub_place.BookclubPlaceSearchActivity"
+            android:windowSoftInputMode="adjustPan" />
         
         <activity
             android:name=".MainActivity"
@@ -151,11 +163,6 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <activity
-            android:name=".search.SearchMainActivity"
-            android:exported="false">
         </activity>
 
     </application>
