--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -94,7 +94,8 @@
         
         <activity
             android:name=".Review.ReviewActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:launchMode="singleTop"/>
         
         <activity
             android:name=".setting.Setting"
