--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,7 @@
         
         <activity
             android:name=".bookclub_book.BookClubCertification"
+            android:windowSoftInputMode="adjustResize"
             android:exported="false" />
         
         <activity
