feature: review detail 페이지 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,9 @@
         <activity
             android:name=".mypage.MyPageScrapDetail"
             android:exported="false" />
+        <activity
+            android:name=".Review.ReviewDetailActivity"
+            android:exported="false" />
         
         <activity
             android:name=".mypage.MyPageReviewList"
